# Stellasaurus

./: .env.example  .gitignore  DESIGN.md  PLAN.md  README.md  pyproject.toml
baml_src/: clients.baml  equivalence.baml  generators.baml
config/: default.toml
scripts/: analyze_dislocations.py
seeds/: pairs.seed.yaml
src/stellasaurus/: __init__.py  app.py
src/stellasaurus/background/: __init__.py  catalog_sync.py  fee_sync.py  feed_manager.py  flattener.py  halt.py  live_execution.py  maker_sim.py  matchers.py  pairing.py  registry_loader.py  requote_probe.py  scheduler.py  subscription_mgr.py
src/stellasaurus/background/equivalence/: __init__.py  engine.py
src/stellasaurus/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/stellasaurus/common/: __init__.py  clock.py  config.py  ids.py  logging.py  money.py  types.py
src/stellasaurus/control/: __init__.py  app.py  net.py  readmodel.py
src/stellasaurus/control/static/: index.html
src/stellasaurus/hot_path/: __init__.py  book.py  evaluator.py  execution.py  fees.py  ingest.py  latency.py  normalize.py  opportunities.py  positions.py  risk.py  seams.py  snapshot.py  staleness.py  state.py
src/stellasaurus/storage/: __init__.py  audit_repo.py  db.py  markets_repo.py  pnl_repo.py  positions_repo.py  registry_repo.py  schema.sql
src/stellasaurus/venues/: __init__.py  base.py  factory.py  orders.py  sharding.py  signing.py
src/stellasaurus/venues/kalshi/: __init__.py  client.py  parse.py  stream.py
src/stellasaurus/venues/polymarket/: __init__.py  client.py  parse.py  stream.py
tests/replay/: test_replay.py
tests/replay/fixtures/: btc_pair.jsonl
tests/smoke/: test_live.py
tests/unit/: test_book.py  test_equivalence.py  test_evaluator.py  test_fee_sync.py  test_feed_manager.py  test_fees.py  test_flattener.py  test_hanging_integration.py  test_ids.py  test_latency_bench.py  test_maker_sim.py  test_matchers.py  test_money.py  test_net.py  test_normalize.py  test_order_gateways.py  test_pairing.py  test_parse.py  test_priority_sync.py  test_registry_loader.py  test_risk_execution.py  test_sharding.py  test_signing.py  test_snapshot.py  test_state_staleness.py  test_storage.py
