[project]
name = "stellasaurus"
version = "0.1.0"
description = "Locked cross-venue arbitrage system (Kalshi + Polymarket US) — Phase 1 read-only spine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Arun Bahl" }]

# The hot_path package deliberately has ZERO third-party deps so it stays
# trivially portable (and re-implementable in Go). Everything heavy lives in the
# optional extras below, used only by the background / control / venue planes.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "python-dotenv>=1.0",  # load .env into the process env (also for BAML)
]

[project.optional-dependencies]
# Background plane + venue adapters (network, disk).
bg = [
    "httpx>=0.27",
    "websockets>=12.0",
    "PyYAML>=6.0",
    "cryptography>=42.0",   # RSA-PSS (Kalshi) + Ed25519 (Polymarket) signing
    "baml-py>=0.222.0",
]
# Control plane (dashboard).
control = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
# Dev tooling.
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
stellasaurus = "stellasaurus.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stellasaurus"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: hits real venue endpoints over the network (deselect with -m 'not live')",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# Generated by baml-cli; do not lint.
extend-exclude = ["src/stellasaurus/baml_client"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["stellasaurus"]
mypy_path = "src"
strict = true
exclude = ["src/stellasaurus/baml_client/"]

[[tool.mypy.overrides]]
# Generated BAML client — not type-checked under strict.
module = "stellasaurus.baml_client.*"
ignore_errors = true
follow_imports = "skip"

# The hot_path boundary must never import the heavy planes.
[[tool.mypy.overrides]]
module = "stellasaurus.hot_path.*"
disallow_any_explicit = false

# PyYAML ships no type stubs; the seed loader casts its result explicitly.
[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
